"""
This library contains the test suite source files of the instrumentation module.
Note that:
 - Each source file has its own kt_android_library target
 - Target name of each kt_android_library as to be in small letters, separated by a underscore
 and ends with "_lib"
"""

load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_android_library")

kt_android_library(
    name = "e2e_test_helper",
    testonly = True,
    srcs = [
        "EndToEndTestHelper.kt",
    ],
    visibility = ["//:oppia_testing_visibility"],
    deps = [
        "//third_party:androidx_test_ext_junit",
        "//third_party:androidx_test_uiautomator_uiautomator",
        "//third_party:junit_junit",
    ],
)

kt_android_library(
    name = "exploration_player_test_lib",
    testonly = True,
    srcs = [
        "player/ExplorationPlayerTest.kt",
    ],
    visibility = ["//:oppia_testing_visibility"],
    deps = [
        ":e2e_test_helper",
        "//third_party:androidx_test_ext_junit",
        "//third_party:androidx_test_runner",
        "//third_party:androidx_test_uiautomator_uiautomator",
        "//third_party:com_google_truth_truth",
        "//third_party:junit_junit",
    ],
)
