"""
This library contains the test suite source files of the instrumentation module.
Note that:
 - Each source file has its own kt_android_library target
 - Target name of each kt_android_library as to be in small letters, separated by a underscore
 and ends with "_lib"
"""

load("//instrumentation:oppia_instrumentation_test.bzl", "oppia_instrumentation_test")

oppia_instrumentation_test(
    name = "ExplorationPlayerTest",
    srcs = [
        "player/ExplorationPlayerTest.kt",
    ],
    deps = [
        "//testing/src/main/java/org/oppia/android/testing/uiautomator:e2e_test_helper",
        "//third_party:androidx_test_ext_junit",
        "//third_party:androidx_test_runner",
        "//third_party:androidx_test_uiautomator_uiautomator",
        "//third_party:com_google_truth_truth",
        "//third_party:junit_junit",
    ],
)
