"""
Top-level libraries corresponding to Kotlin-based developer workflow scripts.
"""

load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "compute_affected_tests_lib",
    testonly = True,
    srcs = [
        "ComputeAffectedTests.kt",
    ],
    visibility = ["//scripts:oppia_script_lib_visibility"],
)

kt_jvm_library(
    name = "pattern_validation_lib",
    testonly = True,
    srcs = [
        "RegexPatternValidationCheck.kt",
        "RepoFile.kt",
        "ScriptResultConstants.kt",
    ],
    deps = [
        "//scripts/src/java/org/oppia/android/scripts/proto:file_content_validation_structure_java_proto_lite",
        "//scripts/src/java/org/oppia/android/scripts/proto:filename_pattern_validation_structure_java_proto_lite",
    ],
)
