"""
This library contains the test application and modules used to build the test app for end-to-end tests.
"""

load("//defs:oppia_android_library.bzl", "oppia_android_library")

oppia_android_library(
    name = "oppia_test_application",
    testonly = True,
    srcs = [
        "EndToEndTestGcsResourceModule.kt",
        "EndToEndTestImageParsingModule.kt",
        "EndToEndTestNetworkConfigModule.kt",
        "TestApplicationComponent.kt",
        "TestOppiaApplication.kt",
    ],
    visibility = ["//:oppia_e2e_testing_visibility"],
    deps = [
        "//:dagger",
        "//app",
        "//app/src/main/java/org/oppia/android/app/activity/route:activity_router_module",
        "//app/src/main/java/org/oppia/android/app/application:abstract_application",
        "//app/src/main/java/org/oppia/android/app/application:application_component",
        "//app/src/main/java/org/oppia/android/app/application:modules",
        "//app/src/main/java/org/oppia/android/app/application/testing:testing_build_flavor_module",
        "//app/src/main/java/org/oppia/android/app/shim:prod_modules",
        "//app/src/main/java/org/oppia/android/app/translation:prod_module",
        "//data/src/main/java/org/oppia/android/data/backends/gae:network_config_annotations",
        "//data/src/main/java/org/oppia/android/data/backends/gae:prod_module",
        "//domain/src/main/java/org/oppia/android/domain/classify:interactions_module",
        "//domain/src/main/java/org/oppia/android/domain/classify/rules/algebraicexpressioninput:algebraic_expression_input_rule_module",
        "//domain/src/main/java/org/oppia/android/domain/classify/rules/continueinteraction:continue_module",
        "//domain/src/main/java/org/oppia/android/domain/classify/rules/dragAndDropSortInput:drag_and_drop_sort_input_module",
        "//domain/src/main/java/org/oppia/android/domain/classify/rules/fractioninput:fraction_input_module",
        "//domain/src/main/java/org/oppia/android/domain/classify/rules/imageClickInput:image_click_input_module",
        "//domain/src/main/java/org/oppia/android/domain/classify/rules/itemselectioninput:item_selection_input_module",
        "//domain/src/main/java/org/oppia/android/domain/classify/rules/mathequationinput:math_equation_input_rule_module",
        "//domain/src/main/java/org/oppia/android/domain/classify/rules/multiplechoiceinput:multiple_choice_input_module",
        "//domain/src/main/java/org/oppia/android/domain/classify/rules/numberwithunits:number_with_units_rule_module",
        "//domain/src/main/java/org/oppia/android/domain/classify/rules/numericexpressioninput:numeric_expression_input_rule_module",
        "//domain/src/main/java/org/oppia/android/domain/classify/rules/numericinput:numeric_input_rule_module",
        "//domain/src/main/java/org/oppia/android/domain/classify/rules/ratioinput:ratio_input_module",
        "//domain/src/main/java/org/oppia/android/domain/classify/rules/textinput:text_input_rule_module",
        "//domain/src/main/java/org/oppia/android/domain/exploration:prod_module",
        "//domain/src/main/java/org/oppia/android/domain/hintsandsolution:prod_module",
        "//domain/src/main/java/org/oppia/android/domain/hintsandsolution:standard_prod_config_module",
        "//domain/src/main/java/org/oppia/android/domain/onboarding:retriever_prod_module",
        "//domain/src/main/java/org/oppia/android/domain/oppialogger:prod_module",
        "//domain/src/main/java/org/oppia/android/domain/oppialogger/analytics:cpu_module",
        "//domain/src/main/java/org/oppia/android/domain/oppialogger/analytics:prod_module",
        "//domain/src/main/java/org/oppia/android/domain/oppialogger/exceptions:logger_module",
        "//domain/src/main/java/org/oppia/android/domain/oppialogger/logscheduler:metric_log_scheduler_module",
        "//domain/src/main/java/org/oppia/android/domain/oppialogger/loguploader:worker_module",
        "//domain/src/main/java/org/oppia/android/domain/platformparameter:prod_config_module",
        "//domain/src/main/java/org/oppia/android/domain/platformparameter:prod_module",
        "//domain/src/main/java/org/oppia/android/domain/platformparameter/syncup:prod_module",
        "//domain/src/main/java/org/oppia/android/domain/question:question_module",
        "//domain/src/main/java/org/oppia/android/domain/topic:prod_module",
        "//domain/src/main/java/org/oppia/android/domain/workmanager:prod_module",
        "//third_party:javax_inject_javax_inject",
        "//utility/src/main/java/org/oppia/android/util/accessibility:prod_module",
        "//utility/src/main/java/org/oppia/android/util/caching:asset_prod_module",
        "//utility/src/main/java/org/oppia/android/util/caching:caching_prod_module",
        "//utility/src/main/java/org/oppia/android/util/gcsresource:annotations",
        "//utility/src/main/java/org/oppia/android/util/locale:prod_module",
        "//utility/src/main/java/org/oppia/android/util/logging:prod_module",
        "//utility/src/main/java/org/oppia/android/util/logging:standard_event_logging_configuration_module",
        "//utility/src/main/java/org/oppia/android/util/logging/firebase:debug_module",
        "//utility/src/main/java/org/oppia/android/util/logging/firebase:prod_module",
        "//utility/src/main/java/org/oppia/android/util/logging/performancemetrics:performance_metrics_assessor_module",
        "//utility/src/main/java/org/oppia/android/util/logging/performancemetrics:performance_metrics_configurations_module",
        "//utility/src/main/java/org/oppia/android/util/networking:debug_module",
        "//utility/src/main/java/org/oppia/android/util/networking:debug_util_module",
        "//utility/src/main/java/org/oppia/android/util/parser/html:html_parser_entity_type_module",
        "//utility/src/main/java/org/oppia/android/util/parser/image:glide_image_loader_module",
        "//utility/src/main/java/org/oppia/android/util/parser/image:image_parsing_annonations",
        "//utility/src/main/java/org/oppia/android/util/system:prod_module",
        "//utility/src/main/java/org/oppia/android/util/threading:prod_module",
    ],
)
