"""
This library contains the utilities used in end-to-end testing.
"""

load("//defs:oppia_android_library.bzl", "oppia_android_library")

oppia_android_library(
    name = "e2e_test_helper",
    testonly = True,
    srcs = [
        "EndToEndTestHelper.kt",
    ],
    visibility = ["//:oppia_e2e_testing_visibility"],
    deps = [
        "//third_party:androidx_test_core",
        "//third_party:androidx_test_uiautomator_uiautomator",
        "//third_party:com_google_truth_truth",
    ],
)
