"""
This library contains the Robolectric tests for the e2e test modules.
"""

load("//defs:oppia_android_test.bzl", "oppia_android_test")

oppia_android_test(
    name = "EndToEndTestGcsResourceModuleTest",
    srcs = ["EndToEndTestGcsResourceModuleTest.kt"],
    deps = [
        "//:dagger",
        "//instrumentation/src/java/org/oppia/android/instrumentation/application:oppia_test_application",
        "//third_party:androidx_test_core",
        "//third_party:androidx_test_ext_junit",
        "//third_party:com_google_truth_truth",
        "//third_party:javax_inject_javax_inject",
        "//third_party:junit_junit",
        "//third_party:org_robolectric_annotations",
        "//utility/src/main/java/org/oppia/android/util/gcsresource:annotations",
    ],
)

oppia_android_test(
    name = "EndToEndTestImageParsingModuleTest",
    srcs = ["EndToEndTestImageParsingModuleTest.kt"],
    deps = [
        "//:dagger",
        "//instrumentation/src/java/org/oppia/android/instrumentation/application:oppia_test_application",
        "//third_party:androidx_test_core",
        "//third_party:androidx_test_ext_junit",
        "//third_party:com_google_truth_truth",
        "//third_party:javax_inject_javax_inject",
        "//third_party:junit_junit",
        "//third_party:org_robolectric_annotations",
        "//utility/src/main/java/org/oppia/android/util/parser/image:image_parsing_annonations",
    ],
)

oppia_android_test(
    name = "EndToEndTestNetworkConfigModuleTest",
    srcs = ["EndToEndTestNetworkConfigModuleTest.kt"],
    deps = [
        "//:dagger",
        "//data/src/main/java/org/oppia/android/data/backends/gae:network_config_annotations",
        "//instrumentation/src/java/org/oppia/android/instrumentation/application:oppia_test_application",
        "//third_party:androidx_test_core",
        "//third_party:androidx_test_ext_junit",
        "//third_party:com_google_truth_truth",
        "//third_party:javax_inject_javax_inject",
        "//third_party:junit_junit",
        "//third_party:org_robolectric_annotations",
    ],
)
