"""
Libraries corresponding to asset transformation & download scripts.
"""

load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "download_lessons_lib",
    testonly = True,
    srcs = ["DownloadLessons.kt"],
    visibility = ["//scripts:oppia_script_binary_visibility"],
    deps = [
        ":dto_proto_to_legacy_proto_converter",
        "//scripts/src/java/org/oppia/android/scripts/gae",
        "//scripts/src/java/org/oppia/android/scripts/gae:gae_json_impl",
        "//scripts/src/java/org/oppia/android/scripts/gae/proto:proto_version_provider",
    ],
)

kt_jvm_library(
    name = "dto_proto_to_legacy_proto_converter",
    testonly = True,
    srcs = ["DtoProtoToLegacyProtoConverter.kt"],
    visibility = ["//scripts:oppia_script_binary_visibility"],
    deps = [
        "//model/src/main/proto:exploration_java_proto",
        "//model/src/main/proto:interaction_object_java_proto",
        "//model/src/main/proto:languages_java_proto",
        "//model/src/main/proto:math_java_proto",
        "//model/src/main/proto:topic_java_proto",
        "//model/src/main/proto:translation_java_proto",
        "//third_party:oppia_proto_api_java_protos",
    ],
)
