"""
Libraries corresponding to developer scripts that help with continuous integration workflows.
"""

load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "compute_affected_tests_lib",
    srcs = [
        "ComputeAffectedTests.kt",
    ],
    visibility = ["//scripts:oppia_script_binary_visibility"],
    deps = [
        "//scripts/src/java/org/oppia/android/scripts/common:bazel_client",
        "//scripts/src/java/org/oppia/android/scripts/common:command_executor",
        "//scripts/src/java/org/oppia/android/scripts/common:git_client",
        "//scripts/src/java/org/oppia/android/scripts/common:proto_string_encoder",
        "//scripts/src/java/org/oppia/android/scripts/common:script_background_coroutine_dispatcher",
        "//scripts/src/java/org/oppia/android/scripts/proto:affected_tests_java_proto",
    ],
)

kt_jvm_library(
    name = "pre_push_checks_lib",
    srcs = ["PrePushChecks.kt"],
    visibility = ["//scripts:oppia_script_binary_visibility"],
    deps = [
        "//scripts/src/java/org/oppia/android/scripts/common:bazel_client",
        "//scripts/src/java/org/oppia/android/scripts/common:command_executor",
        "//scripts/src/java/org/oppia/android/scripts/common:script_background_coroutine_dispatcher",
        "//scripts/third_party:org_jetbrains_kotlinx_kotlinx-coroutines-core",
    ],
)

kt_jvm_library(
    name = "retrieve_affected_tests_lib",
    srcs = [
        "RetrieveAffectedTests.kt",
    ],
    visibility = ["//scripts:oppia_script_binary_visibility"],
    deps = [
        "//scripts/src/java/org/oppia/android/scripts/common:proto_string_encoder",
        "//scripts/src/java/org/oppia/android/scripts/proto:affected_tests_java_proto",
    ],
)
